--- a/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
+++ b/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="2.1.1" />
     <PackageReference Include="Volo.Abp.Validation" Version="2.1.1" />
   </ItemGroup>
 
