--- a/src/EasyAbp.Abp.SettingUi.Web/EasyAbp.Abp.SettingUi.Web.csproj
+++ b/src/EasyAbp.Abp.SettingUi.Web/EasyAbp.Abp.SettingUi.Web.csproj
@@ -11,8 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="2.1.1" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Shared" Version="2.1.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Web" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,7 +36,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EasyAbp.Abp.SettingUi.Application.Contracts\EasyAbp.Abp.SettingUi.Application.Contracts.csproj" />
     <ProjectReference Include="..\EasyAbp.Abp.SettingUi.Domain.Shared\EasyAbp.Abp.SettingUi.Domain.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Components\Default.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\SettingUi\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\SettingUi\_ViewImports.cshtml" />
   </ItemGroup>
 
 </Project>
