--- a/sample/MyAbpApp/src/MyAbpApp.Application/MyAbpApp.Application.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Application/MyAbpApp.Application.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Account.Application" Version="2.1.1" />
+    <PackageReference Include="Volo.Abp.Emailing" Version="2.1.1" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="2.1.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="2.1.1" />
     <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="2.1.1" />
