--- a/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
+++ b/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="2.1.1" />
+    <PackageReference Include="Volo.Abp.UI" Version="2.1.1" />
     <PackageReference Include="Volo.Abp.Validation" Version="2.1.1" />
   </ItemGroup>
 
