--- a/test/EasyAbp.Abp.SettingUi.Application.Tests/EasyAbp.Abp.SettingUi.Application.Tests.csproj
+++ b/test/EasyAbp.Abp.SettingUi.Application.Tests/EasyAbp.Abp.SettingUi.Application.Tests.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="SettingProperties\TestSettingProperties.json" />
+    <EmbeddedResource Include="SettingProperties\TestSettingProperties.json" />
+  </ItemGroup>
+
 </Project>
