--- a/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
+++ b/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
@@ -18,4 +18,9 @@
     <Content Remove="Localization\SettingUi\*.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="SettingProperties\*.json" />
+    <Content Remove="SettingProperties\*.json" />
+  </ItemGroup>
+
 </Project>
