--- a/test/EasyAbp.Abp.SettingUi.Domain.Tests/EasyAbp.Abp.SettingUi.Domain.Tests.csproj
+++ b/test/EasyAbp.Abp.SettingUi.Domain.Tests/EasyAbp.Abp.SettingUi.Domain.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
