--- a/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyAbp.Abp.SettingUi.Domain.Shared" Version="1.0.0" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="2.1.1" />
     <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="2.1.1" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="2.1.1" />
