--- a/angular/package.json
+++ b/angular/package.json
@@ -12,11 +12,11 @@
   },
   "private": true,
   "dependencies": {
-    "@abp/ng.account": "^2.2.0",
-    "@abp/ng.theme.basic": "^2.2.0",
-    "@abp/ng.identity": "^2.2.0",
-    "@abp/ng.tenant-management": "^2.2.0",
-    "@abp/ng.setting-management": "^2.2.0",
+    "@abp/ng.account": "~2.3.0",
+    "@abp/ng.theme.basic": "~2.3.0",
+    "@abp/ng.identity": "~2.3.0",
+    "@abp/ng.tenant-management": "~2.3.0",
+    "@abp/ng.setting-management": "~2.3.0",
     "@angular/animations": "~8.2.14",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
