--- a/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
@@ -8,15 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EasyAbp.Abp.SettingUi.Domain.Shared" Version="1.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="2.7.0" />
+    <ProjectReference Include="..\..\..\..\src\EasyAbp.Abp.SettingUi.Domain.Shared\EasyAbp.Abp.SettingUi.Domain.Shared.csproj" />
+    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="2.8.0" />
   </ItemGroup>
 
   <ItemGroup>
