--- a/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
@@ -35,9 +35,12 @@
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -45,14 +48,14 @@
     <ProjectReference Include="..\MyAbpApp.Application\MyAbpApp.Application.csproj" />
     <ProjectReference Include="..\MyAbpApp.HttpApi\MyAbpApp.HttpApi.csproj" />
     <ProjectReference Include="..\MyAbpApp.EntityFrameworkCore.DbMigrations\MyAbpApp.EntityFrameworkCore.DbMigrations.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="2.7.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
