--- a/sample/MyAbpApp/src/MyAbpApp.HttpApi.Client/MyAbpApp.HttpApi.Client.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.HttpApi.Client/MyAbpApp.HttpApi.Client.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>MyAbpApp</RootNamespace>
   </PropertyGroup>
 
@@ -12,11 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi.Client" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="2.7.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="2.7.0" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi.Client" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="2.8.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
