--- a/sample/MyAbpApp/src/MyAbpApp.Application.Contracts/MyAbpApp.Application.Contracts.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Application.Contracts/MyAbpApp.Application.Contracts.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.ObjectExtending" Version="2.8.0" />
     <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="2.8.0" />
     <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="2.8.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="2.8.0" />
