--- a/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
@@ -5,22 +5,27 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>MyAbpApp</RootNamespace>
+    <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="2.9.0" />
-    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="2.9.0" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="2.9.0" />
-    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="2.9.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="2.9.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="2.9.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="2.9.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="2.9.0" />
+    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="3.0.0" />
+    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="3.0.0" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="3.0.0" />
+    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="3.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="3.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="3.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="3.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Localization\MyAbpApp\*.json" />
     <Content Remove="Localization\MyAbpApp\*.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
