--- a/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
+++ b/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
@@ -5,12 +5,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>EasyAbp.Abp.SettingUi</RootNamespace>
+    <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="3.0.3" />
-    <PackageReference Include="Volo.Abp.UI" Version="3.0.3" />
-    <PackageReference Include="Volo.Abp.Validation" Version="3.0.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="3.0.4" />
+    <PackageReference Include="Volo.Abp.UI" Version="3.0.4" />
+    <PackageReference Include="Volo.Abp.Validation" Version="3.0.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,10 @@
   <ItemGroup>
     <EmbeddedResource Include="SettingProperties\*.json" />
     <Content Remove="SettingProperties\*.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
