Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,7 @@ stages:
         AuthScheme: 'sqlServerAuthentication'
         SqlUsername: $(SqlUsername)
         SqlPassword: $(SqlPassword)
+       continueOnError: true
      - task: CmdLine@2
        displayName: 'update database'
        inputs:
