Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,7 +91,7 @@ stages:
           
           drop DATABASE  MyAbpApp
         ServerName: $(ServerName)
-        DatabaseName: 'MyAbpApp'
+        DatabaseName: $(DatabaseName)
         AuthScheme: 'sqlServerAuthentication'
         SqlUsername: $(SqlUsername)
         SqlPassword: $(SqlPassword)
