--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,6 +67,20 @@ stages:
     pool:
       vmImage: windows-2019
     steps:
+     - task: CmdLine@2
+       inputs:
+        script: | 
+          echo commands
+          sed -i '0,/Default[^,]*/s//$(ConnectionStrings)"/g' sample/MyAbpApp/src/MyAbpApp.Web/appsettings.json
+          echo commands executed
+          
+     - task: CmdLine@2
+       inputs:
+        script: |
+          echo commands
+          sed -i '0,/Default[^,]*/s//$(ConnectionStrings)"/g' sample/MyAbpApp/src/MyAbpApp.DbMigrator/appsettings.json
+          echo commands executed
+
      - task: UseDotNet@2
        inputs:
         packageType: 'sdk'
