add SettingProperties.json to VFS

--- a/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
@@ -22,6 +22,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Localization\MyAbpApp\*.json" />
     <Content Remove="Localization\MyAbpApp\*.json" />
+    <EmbeddedResource Include="SettingProperties\**\*.json" />
+    <Content Remove="SettingProperties\**\*.json" />
   </ItemGroup>
 
   <ItemGroup>
