Update to ABP 4.0.2

--- a/sample/MyAbpApp/src/MyAbpApp.DbMigrator/appsettings.json
+++ b/sample/MyAbpApp/src/MyAbpApp.DbMigrator/appsettings.json
@@ -7,11 +7,21 @@
       "MyAbpApp_Web": {
         "ClientId": "MyAbpApp_Web",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44372"
+        "RootUrl": "https://localhost:44336"
       },
       "MyAbpApp_App": {
         "ClientId": "MyAbpApp_App",
-        "ClientSecret": "1q2w3e*"
+        "ClientSecret": "1q2w3e*",
+        "RootUrl": "http://localhost:4200"
+      },
+      "MyAbpApp_Blazor": {
+        "ClientId": "MyAbpApp_Blazor",
+        "RootUrl": "https://localhost:44307"
+      },
+      "MyAbpApp_Swagger": {
+        "ClientId": "MyAbpApp_Swagger",
+        "ClientSecret": "1q2w3e*",
+        "RootUrl": "https://localhost:44319"
       }
     }
   }
