--- a/sample/MyAbpApp/src/MyAbpApp.Web/appsettings.json
+++ b/sample/MyAbpApp/src/MyAbpApp.Web/appsettings.json
@@ -1,19 +1,16 @@
 ﻿{
   "App": {
-    "SelfUrl": "https://localhost:44372"
+    "SelfUrl": "https://localhost:44336"
   },
   "ConnectionStrings": {
     "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MyAbpApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44372"
+    "Authority": "https://localhost:44336",
+    "RequireHttpsMetadata": "false"
   },
-  "IdentityServer": {
-    "Clients": {
-      "MyAbpApp_App": {
-        "ClientId": "MyAbpApp_App"
-      }
-    }
+  "StringEncryption": {
+    "DefaultPassPhrase": "FFm41ghbTUxFiSKl"
   },
   "Settings": {
     "Abp.Mailing.Smtp.Host": "127.0.0.1",
