--- a/sample/MyAbpApp/src/MyAbpApp.Application/MyAbpApp.Application.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Application/MyAbpApp.Application.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>MyAbpApp</RootNamespace>
   </PropertyGroup>
 
@@ -14,12 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.Application" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.Emailing" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Emailing" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="4.0.2" />
   </ItemGroup>
 
 </Project>
