--- a/sample/MyAbpApp/src/MyAbpApp.HttpApi/MyAbpApp.HttpApi.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.HttpApi/MyAbpApp.HttpApi.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>MyAbpApp</RootNamespace>
   </PropertyGroup>
 
@@ -13,11 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="4.0.2" />
   </ItemGroup>
 
 </Project>
