--- a/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>MyAbpApp.Web</RootNamespace>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -36,11 +36,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
-    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,14 +45,15 @@
     <ProjectReference Include="..\MyAbpApp.Application\MyAbpApp.Application.csproj" />
     <ProjectReference Include="..\MyAbpApp.HttpApi\MyAbpApp.HttpApi.csproj" />
     <ProjectReference Include="..\MyAbpApp.EntityFrameworkCore.DbMigrations\MyAbpApp.EntityFrameworkCore.DbMigrations.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="4.0.2" />
   </ItemGroup>
 
 </Project>
