--- a/sample/MyAbpApp/test/MyAbpApp.TestBase/MyAbpApp.TestBase.csproj
+++ b/sample/MyAbpApp/test/MyAbpApp.TestBase/MyAbpApp.TestBase.csproj
@@ -3,14 +3,14 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>MyAbpApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.TestBase" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.Authorization" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.TestBase" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="4.0.2" />
     <ProjectReference Include="..\..\src\MyAbpApp.Domain\MyAbpApp.Domain.csproj" />
   </ItemGroup>
 
