--- a/sample/MyAbpApp/test/MyAbpApp.Web.Tests/MyAbpApp.Web.Tests.csproj
+++ b/sample/MyAbpApp/test/MyAbpApp.Web.Tests/MyAbpApp.Web.Tests.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <RootNamespace>MyAbpApp</RootNamespace>
@@ -15,9 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.26" />
     <ProjectReference Include="..\MyAbpApp.Application.Tests\MyAbpApp.Application.Tests.csproj" />
     <ProjectReference Include="..\..\src\MyAbpApp.Web\MyAbpApp.Web.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="4.0.2" />
   </ItemGroup>
 
   <ItemGroup>
