--- a/src/EasyAbp.Abp.SettingUi.Domain/EasyAbp.Abp.SettingUi.Domain.csproj
+++ b/src/EasyAbp.Abp.SettingUi.Domain/EasyAbp.Abp.SettingUi.Domain.csproj
@@ -3,13 +3,13 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>EasyAbp.Abp.SettingUi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="4.0.2" />
     <ProjectReference Include="..\EasyAbp.Abp.SettingUi.Domain.Shared\EasyAbp.Abp.SettingUi.Domain.Shared.csproj" />
   </ItemGroup>
 
