--- a/test/EasyAbp.Abp.SettingUi.Domain.Tests/EasyAbp.Abp.SettingUi.Domain.Tests.csproj
+++ b/test/EasyAbp.Abp.SettingUi.Domain.Tests/EasyAbp.Abp.SettingUi.Domain.Tests.csproj
@@ -3,13 +3,13 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>EasyAbp.Abp.SettingUi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="4.0.2" />
   </ItemGroup>
 
   <ItemGroup>
