--- a/test/EasyAbp.Abp.SettingUi.TestBase/EasyAbp.Abp.SettingUi.TestBase.csproj
+++ b/test/EasyAbp.Abp.SettingUi.TestBase/EasyAbp.Abp.SettingUi.TestBase.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>EasyAbp.Abp.SettingUi</RootNamespace>
   </PropertyGroup>
 
@@ -11,13 +11,13 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
-    <PackageReference Include="Volo.Abp.Authorization" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="4.0.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="3.3.0" />
-    <PackageReference Include="Volo.Abp.TestBase" Version="3.3.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.TestBase" Version="4.0.2" />
     <ProjectReference Include="..\..\src\EasyAbp.Abp.SettingUi.Domain\EasyAbp.Abp.SettingUi.Domain.csproj" />
   </ItemGroup>
 
