--- a/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
@@ -45,15 +45,15 @@
     <ProjectReference Include="..\MyAbpApp.Application\MyAbpApp.Application.csproj" />
     <ProjectReference Include="..\MyAbpApp.HttpApi\MyAbpApp.HttpApi.csproj" />
     <ProjectReference Include="..\MyAbpApp.EntityFrameworkCore.DbMigrations\MyAbpApp.EntityFrameworkCore.DbMigrations.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
