--- a/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Domain.Shared/MyAbpApp.Domain.Shared.csproj
@@ -9,14 +9,14 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="4.1.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
