--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0
 
       - name: Find and Replace
-        uses: shitiomatic/str-replace@master
+        uses: jacobtomlinson/gha-find-replace@master
         with:
           find: \]\((/docs/)
           replace: "](/modules/${{ github.event.repository.name }}/"
@@ -32,7 +32,6 @@ jobs:
           cp -rf ../docs/ docs/.vuepress/public/modules/${{ github.event.repository.name }}
           git add --all
           echo "##[set-output name=diff;]$(git diff --staged)"
-
       - name: Commit files
         if: steps.change.outputs.diff
         run: |
@@ -41,7 +40,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m "Update the docs of ${{ github.event.repository.name }}" -a
-
       - name: Push changes
         if: steps.change.outputs.diff
         uses: ad-m/github-push-action@master
