--- a/sample/MyAbpApp/src/MyAbpApp.Application/MyAbpApp.Application.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Application/MyAbpApp.Application.csproj
@@ -14,12 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.Application" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Emailing" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.Emailing" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
