--- a/sample/MyAbpApp/src/MyAbpApp.HttpApi/MyAbpApp.HttpApi.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.HttpApi/MyAbpApp.HttpApi.csproj
@@ -13,11 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
