--- a/sample/MyAbpApp/test/MyAbpApp.TestBase/MyAbpApp.TestBase.csproj
+++ b/sample/MyAbpApp/test/MyAbpApp.TestBase/MyAbpApp.TestBase.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.TestBase" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Authorization" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.TestBase" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="4.3.0" />
     <ProjectReference Include="..\..\src\MyAbpApp.Domain\MyAbpApp.Domain.csproj" />
   </ItemGroup>
 
