--- a/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
+++ b/src/EasyAbp.Abp.SettingUi.Domain.Shared/EasyAbp.Abp.SettingUi.Domain.Shared.csproj
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.UI" Version="$(AbpVersion)" />
-    <PackageReference Include="Volo.Abp.Validation" Version="$(AbpVersion)" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.UI" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.Validation" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
