--- a/sample/MyAbpApp/src/MyAbpApp.DbMigrator/MyAbpApp.DbMigrator.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.DbMigrator/MyAbpApp.DbMigrator.csproj
@@ -9,13 +9,11 @@
 
   <ItemGroup>
     <None Remove="appsettings.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <!--APPSETTINGS-SECRETS-->
   </ItemGroup>
 
   <ItemGroup>
@@ -23,13 +21,19 @@
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Autofac" Version="4.3.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.4.0" />
     <ProjectReference Include="..\MyAbpApp.Application.Contracts\MyAbpApp.Application.Contracts.csproj" />
-    <ProjectReference Include="..\MyAbpApp.EntityFrameworkCore.DbMigrations\MyAbpApp.EntityFrameworkCore.DbMigrations.csproj" />
+    <ProjectReference Include="..\MyAbpApp.EntityFrameworkCore\MyAbpApp.EntityFrameworkCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Logs\**" />
+    <Content Remove="Logs\**" />
+    <EmbeddedResource Remove="Logs\**" />
+    <None Remove="Logs\**" />
   </ItemGroup>
 
 </Project>
