--- a/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
+++ b/sample/MyAbpApp/src/MyAbpApp.Web/MyAbpApp.Web.csproj
@@ -37,23 +37,23 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\src\EasyAbp.Abp.SettingUi.Web\EasyAbp.Abp.SettingUi.Web.csproj" />
     <ProjectReference Include="..\MyAbpApp.Application\MyAbpApp.Application.csproj" />
     <ProjectReference Include="..\MyAbpApp.HttpApi\MyAbpApp.HttpApi.csproj" />
-    <ProjectReference Include="..\MyAbpApp.EntityFrameworkCore.DbMigrations\MyAbpApp.EntityFrameworkCore.DbMigrations.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.3.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="4.3.0" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.3.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.3.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.3.0" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="4.3.0" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.3.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="4.3.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="4.3.0" />
+    <ProjectReference Include="..\MyAbpApp.EntityFrameworkCore\MyAbpApp.EntityFrameworkCore.csproj" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="4.4.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="4.4.0" />
   </ItemGroup>
 
 </Project>
